fix: progress bar causing horizontal overflow

--- a/styles/progressBar.css
+++ b/styles/progressBar.css
@@ -3,7 +3,7 @@
 #progressBar {
   position: sticky;
   top: 0px;
-  width: 100vw;
+  width: 100%;
   height: 5px;
 }
 
